--- a/MVC/MVC.vcxproj
+++ b/MVC/MVC.vcxproj
@@ -153,6 +153,9 @@
   <ItemGroup>
     <ClCompile Include="MVC.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\..\Desktop\students.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
